# supernote-to-obsidian

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  config.yaml.example  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  pr-title.yml  release-please.yml
scripts/: com.supernote-sync.plist  setup.sh  supernote-sync.service  test_real_device.py
supernote_sync/: __init__.py  cli.py  config.py  pipeline.py
supernote_sync/formatter/: __init__.py  markdown_builder.py
supernote_sync/ingestion/: __init__.py  note_parser.py  wifi_puller.py
supernote_sync/ocr/: __init__.py  engine_factory.py  google_vision_engine.py  preprocessor.py  tesseract_engine.py
supernote_sync/utils/: __init__.py  dedup.py  logging.py
supernote_sync/vault/: __init__.py  writer.py
tests/: __init__.py  test_cli.py  test_config.py  test_pipeline.py  test_utils_logging.py  test_wifi_puller.py
tests/test_formatter/: __init__.py  test_markdown_builder.py
tests/test_ingestion/: __init__.py  test_dedup.py  test_note_parser.py
tests/test_ocr/: __init__.py  test_engines.py  test_preprocessor.py
tests/test_vault/: __init__.py  test_writer.py
